--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "firebase deploy --only hosting:tripsapp"
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^2.0.1",
@@ -20,6 +21,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "firebase": "^9.17.2",
     "react-router-dom": "^6.9.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
