Configured firebase hosting

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,11 @@
 {
   "hosting": {
     "site": "tripsapp",
-    "public": "public"
+    "public": "/dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]  
   }
 }
