--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@flaticon/flaticon-uicons": "^2.0.1",
     "autoprefixer": "^10.4.14",
+    "chart.js": "^4.2.1",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.5.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
