--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-markdown": "^8.0.6",
     "recharts": "^2.5.0",
     "tailwindcss": "^3.2.7"
   },
