--- a/package.json
+++ b/package.json
@@ -8,36 +8,26 @@
     "tunnel": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && firebase deploy --only hosting:tripsapp",
+    "deploy": "pnpm run build && firebase deploy --only hosting:tripsapp",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^2.0.1",
     "autoprefixer": "^10.4.14",
-    "chart.js": "^4.2.1",
     "i18next": "^22.4.13",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-markdown": "^8.0.6",
-    "recharts": "^2.5.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.4.2",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
-    "babel-loader": "^8.3.0",
     "firebase": "^9.17.2",
     "react-router-dom": "^6.9.0",
     "typescript": "^4.6.4",
