--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^2.0.1",
+    "@storybook/react": "^7.0.5",
     "autoprefixer": "^10.4.14",
     "i18next": "^22.4.13",
     "postcss": "^8.4.21",
