--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "pnpm run build && firebase deploy --only hosting:tripsapp",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src ./lang"
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^2.0.1",
