--- a/package.json
+++ b/package.json
@@ -2,37 +2,38 @@
   "name": "trips",
   "private": true,
   "version": "0.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "tunnel": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "pnpm run build && firebase deploy --only hosting:tripsapp",
+    "deploy": "yarn run build && firebase deploy --only hosting:tripsapp",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "format": "prettier --write ./src ./lang"
   },
   "dependencies": {
-    "@flaticon/flaticon-uicons": "^2.0.1",
-    "@storybook/react": "^7.0.5",
+    "@flaticon/flaticon-uicons": "^2.1.0",
+    "@storybook/react": "^7.0.7",
     "autoprefixer": "^10.4.14",
-    "i18next": "^22.4.13",
-    "postcss": "^8.4.21",
+    "i18next": "^22.4.15",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.2.0",
-    "react-markdown": "^8.0.6",
-    "tailwindcss": "^3.2.7"
+    "react-i18next": "^12.2.2",
+    "react-markdown": "^8.0.7",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "firebase": "^9.17.2",
-    "react-router-dom": "^6.9.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "@babel/core": "^7.21.5",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@vitejs/plugin-react": "^2.2.0",
+    "firebase": "^9.21.0",
+    "react-router-dom": "^6.11.0",
+    "typescript": "^4.9.5",
+    "vite": "^3.2.6"
   }
 }
