--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "tunnel": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "yarn run build && firebase deploy --only hosting:tripsapp",
+    "deploy": "yarn run build && firebase deploy --only hosting:tripsapp --project trips-5bb9a",
+    "only-deploy": "firebase deploy --only hosting:tripsapp --project trips-5bb9a",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "format": "prettier --write ./src ./lang"
