--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^9.21.0",
     "react-router-dom": "^6.11.0",
     "typescript": "^4.9.5",
-    "vite": "^3.2.6"
+    "vite": "^3.2.6",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
