--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "tunnel": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "test": "vitest",
     "deploy": "yarn run build && firebase deploy --only hosting:tripsapp --project trips-5bb9a",
     "only-deploy": "firebase deploy --only hosting:tripsapp --project trips-5bb9a",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "pregit": "yarn run format && git add . && cls && echo Commit now",
+    "pregit": "node ./updateAppVersion.mjs && yarn run format && git add . && cls && echo Commit now",
     "format": "prettier --write ./lang ./public ./server ./src"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "react-router-dom": "^6.11.0",
     "typescript": "^4.9.5",
     "vite": "^3.2.6",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vitest": "^0.34.1"
   }
 }
