Fix: micro issues

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "tunnel": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest updateAppVersion",
     "deploy": " node ./updateAppVersion.mjs && yarn run build && firebase deploy --only hosting:tripsapp --project trips-5bb9a",
-    "only-deploy": "firebase deploy --only hosting:tripsapp --project trips-5bb9a",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "pregit": "yarn run format && git add . && cls && echo Commit now",
