--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@react-pdf/renderer": "^3.1.11",
     "@storybook/react": "^7.0.7",
     "autoprefixer": "^10.4.14",
+    "chart.js": "^4.4.0",
     "i18next": "^22.4.15",
     "postcss": "^8.4.23",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
     "react-markdown": "^8.0.7",
