--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
     "react-markdown": "^8.0.7",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "workbox-cli": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.5",
