--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.2",
     "react-markdown": "^8.0.7",
+    "react-swipeable": "^7.0.1",
     "tailwindcss": "^3.3.2",
     "workbox-cli": "^7.0.0"
   },
