--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-i18next": "^12.2.2",
     "react-markdown": "^8.0.7",
     "react-swipeable": "^7.0.1",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.2",
+    "vite-tsconfig-paths": "^4.2.0",
     "workbox-cli": "^7.0.0"
   },
   "devDependencies": {
