--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@flaticon/flaticon-uicons": "^2.1.0",
     "@react-pdf/renderer": "^3.1.11",
     "@storybook/react": "^7.0.7",
+    "@typeform/embed-react": "^3.9.0",
     "autoprefixer": "^10.4.14",
     "i18next": "^22.4.15",
     "postcss": "^8.4.23",
