--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@storybook/react": "^7.0.7",
     "@typeform/embed-react": "^3.9.0",
     "autoprefixer": "^10.4.14",
+    "framer-motion": "^10.16.16",
     "i18next": "^22.4.15",
     "postcss": "^8.4.23",
     "qrcode": "^1.5.3",
