--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,24 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "updateAppVersion.mjs", "src/api/CurrentUser.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "updateAppVersion.mjs", "./src/api/CurrentUser.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
